cmake_minimum_required(VERSION 3.5)

add_subdirectory(001.two-sum)

add_subdirectory(002.add-two-numbers)

add_subdirectory(003.longest-substring-without-repeating-characters)

add_subdirectory(004.median-of-two-sorted-arrays)

add_subdirectory(005.longest-palindromic-substring)

add_subdirectory(006.zigzag-conversion)

add_subdirectory(007.reverse-integer)

add_subdirectory(008.string-to-integer-atoi)

add_subdirectory(009.palindrome-number)

add_subdirectory(template)
