cmake_minimum_required(VERSION 3.5)

add_subdirectory(common)

add_subdirectory(001.two-sum)

add_subdirectory(002.add-two-numbers)

add_subdirectory(003.longest-substring-without-repeating-characters)

add_subdirectory(004.median-of-two-sorted-arrays)

add_subdirectory(005.longest-palindromic-substring)

add_subdirectory(006.zigzag-conversion)

add_subdirectory(007.reverse-integer)

add_subdirectory(008.string-to-integer-atoi)

add_subdirectory(009.palindrome-number)

add_subdirectory(010.regular-expression-matching)

add_subdirectory(011.container-with-most-water)

add_subdirectory(012.integer-to-roman)

add_subdirectory(013.roman-to-integer)

add_subdirectory(014.longest-common-prefix)

add_subdirectory(015.3sum)

add_subdirectory(016.3sum-closest)

add_subdirectory(017.letter-combinations-of-a-phone-number)

add_subdirectory(018.4sum)

add_subdirectory(019.remove-nth-node-from-end-of-list)

add_subdirectory(020.valid-parentheses)

add_subdirectory(021.merge-two-sorted-lists)

add_subdirectory(022.generate-parentheses)

add_subdirectory(023.merge-k-sorted-lists)

add_subdirectory(024.swap-nodes-in-pairs)

add_subdirectory(025.reverse-nodes-in-k-group)

add_subdirectory(026.remove-duplicates-from-sorted-array)

add_subdirectory(027.remove-element)

add_subdirectory(028.implement-strstr)

add_subdirectory(029.divide-two-integers)

add_subdirectory(030.substring-with-concatenation-of-all-words)

add_subdirectory(031.next-permutation)

add_subdirectory(032.longest-valid-parentheses)

add_subdirectory(033.search-in-rotated-sorted-array)

add_subdirectory(034.search-for-a-range)

add_subdirectory(035.search-insert-position)

add_subdirectory(036.valid-sudoku)

add_subdirectory(037.sudoku-solver)

add_subdirectory(038.count-and-say)

add_subdirectory(template)
