cmake_minimum_required(VERSION 3.5)

add_subdirectory(061.rotate-list)

add_subdirectory(062.unique-paths)

add_subdirectory(063.unique-paths-ii)

add_subdirectory(064.minimum-path-sum)

add_subdirectory(065.valid-number)

add_subdirectory(066.plus-one)

add_subdirectory(067.add-binary)

add_subdirectory(068.text-justification)

add_subdirectory(069.sqrtx)

add_subdirectory(070.climbing-stairs)

add_subdirectory(071.simplify-path)

add_subdirectory(072.edit-distance)

add_subdirectory(073.set-matrix-zeroes)