cmake_minimum_required(VERSION 3.5)

add_subdirectory(061.rotate-list)

add_subdirectory(062.unique-paths)

add_subdirectory(063.unique-paths-ii)

add_subdirectory(064.minimum-path-sum)

add_subdirectory(065.valid-number)

add_subdirectory(066.plus-one)

add_subdirectory(067.add-binary)

add_subdirectory(068.text-justification)

add_subdirectory(069.sqrtx)

add_subdirectory(070.climbing-stairs)

add_subdirectory(071.simplify-path)

add_subdirectory(072.edit-distance)

add_subdirectory(073.set-matrix-zeroes)

add_subdirectory(074.search-a-2d-matrix)

add_subdirectory(075.sort-colors)

add_subdirectory(076.minimum-window-substring)

add_subdirectory(077.combinations)

add_subdirectory(078.subsets)

add_subdirectory(079.word-search)

add_subdirectory(080.remove-duplicates-from-sorted-array-ii)

add_subdirectory(081.search-in-rotated-sorted-array-ii)

add_subdirectory(082.remove-duplicates-from-sorted-list-ii)

add_subdirectory(083.remove-duplicates-from-sorted-list)

add_subdirectory(084.largest-rectangle-in-histogram)

add_subdirectory(085.maximal-rectangle)

add_subdirectory(086.partition-list)

add_subdirectory(088.merge-sorted-array)

add_subdirectory(089.gray-code)

add_subdirectory(090.subsets-ii)

add_subdirectory(091.decode-ways)