cmake_minimum_required(VERSION 3.5)

add_subdirectory(121.best-time-to-buy-and-sell-stock)

add_subdirectory(122.best-time-to-buy-and-sell-stock-ii)

add_subdirectory(123.best-time-to-buy-and-sell-stock-iii)

add_subdirectory(124.binary-tree-maximum-path-sum)

add_subdirectory(125.valid-palindrome)

add_subdirectory(126.word-ladder-ii)

add_subdirectory(128.longest-consecutive-sequence)

add_subdirectory(129.sum-root-to-leaf-numbers)
