cmake_minimum_required(VERSION 3.5)

add_subdirectory(121.best-time-to-buy-and-sell-stock)

add_subdirectory(122.best-time-to-buy-and-sell-stock-ii)

add_subdirectory(123.best-time-to-buy-and-sell-stock-iii)

add_subdirectory(124.binary-tree-maximum-path-sum)

add_subdirectory(125.valid-palindrome)

add_subdirectory(126.word-ladder-ii)

add_subdirectory(128.longest-consecutive-sequence)

add_subdirectory(129.sum-root-to-leaf-numbers)

add_subdirectory(130.surrounded-regions)

add_subdirectory(131.palindrome-partitioning)

add_subdirectory(132.palindrome-partitioning-ii)

add_subdirectory(134.gas-station)

add_subdirectory(135.candy)

add_subdirectory(136.single-number)

add_subdirectory(137.single-number-ii)

add_subdirectory(139.word-break)

add_subdirectory(140.word-break-ii)

add_subdirectory(141.linked-list-cycle)

add_subdirectory(142.linked-list-cycle-ii)

add_subdirectory(143.reorder-list)

add_subdirectory(144.binary-tree-preorder-traversal)

add_subdirectory(145.binary-tree-postorder-traversal)

add_subdirectory(146.lru-cache)