cmake_minimum_required(VERSION 3.5)

add_subdirectory(121.best-time-to-buy-and-sell-stock)

add_subdirectory(122.best-time-to-buy-and-sell-stock-ii)

add_subdirectory(123.best-time-to-buy-and-sell-stock-iii)

add_subdirectory(124.binary-tree-maximum-path-sum)

add_subdirectory(125.valid-palindrome)

add_subdirectory(126.word-ladder-ii)

add_subdirectory(128.longest-consecutive-sequence)

add_subdirectory(129.sum-root-to-leaf-numbers)

add_subdirectory(130.surrounded-regions)

add_subdirectory(131.palindrome-partitioning)

add_subdirectory(132.palindrome-partitioning-ii)

add_subdirectory(134.gas-station)

add_subdirectory(135.candy)

add_subdirectory(136.single-number)

add_subdirectory(137.single-number-ii)

add_subdirectory(139.word-break)

add_subdirectory(140.word-break-ii)

add_subdirectory(141.linked-list-cycle)

add_subdirectory(142.linked-list-cycle-ii)

add_subdirectory(143.reorder-list)

add_subdirectory(144.binary-tree-preorder-traversal)

add_subdirectory(145.binary-tree-postorder-traversal)

add_subdirectory(146.lru-cache)

add_subdirectory(147.insertion-sort-list)

add_subdirectory(148.sort-list)

add_subdirectory(149.max-points-on-a-line)

add_subdirectory(150.evaluate-reverse-polish-notation)

add_subdirectory(151.reverse-words-in-a-string)

add_subdirectory(152.maximum-product-subarray)

add_subdirectory(153.find-minimum-in-rotated-sorted-array)

add_subdirectory(154.find-minimum-in-rotated-sorted-array-ii)

add_subdirectory(155.min-stack)

add_subdirectory(160.intersection-of-two-linked-lists)

add_subdirectory(162.find-peak-element)

add_subdirectory(164.maximum-gap)

add_subdirectory(165.compare-version-numbers)

add_subdirectory(166.fraction-to-recurring-decimal)

add_subdirectory(167.two-sum-ii-input-array-is-sorted)

add_subdirectory(168.excel-sheet-column-title)

add_subdirectory(169.majority-element)

add_subdirectory(171.excel-sheet-column-number)

add_subdirectory(172.factorial-trailing-zeroes)

add_subdirectory(173.binary-search-tree-iterator)