cmake_minimum_required(VERSION 3.5)

add_subdirectory(187.repeated-dna-sequences)

add_subdirectory(189.rotate-array)

add_subdirectory(190.reverse-bits)

add_subdirectory(191.number-of-1-bits)

add_subdirectory(198.house-robber)

add_subdirectory(199.binary-tree-right-side-view)

add_subdirectory(200.number-of-islands)

add_subdirectory(201.bitwise-and-of-numbers-range)

add_subdirectory(202.happy-number)

add_subdirectory(203.remove-linked-list-elements)

add_subdirectory(204.count-primes)

add_subdirectory(205.isomorphic-strings)

add_subdirectory(206.reverse-linked-list)

add_subdirectory(207.course-schedule)

add_subdirectory(208.implement-trie-prefix-tree)