cmake_minimum_required(VERSION 3.5)

add_subdirectory(187.repeated-dna-sequences)

add_subdirectory(189.rotate-array)

add_subdirectory(190.reverse-bits)

add_subdirectory(191.number-of-1-bits)

add_subdirectory(198.house-robber)

add_subdirectory(199.binary-tree-right-side-view)

add_subdirectory(200.number-of-islands)

add_subdirectory(201.bitwise-and-of-numbers-range)

add_subdirectory(202.happy-number)

add_subdirectory(203.remove-linked-list-elements)

add_subdirectory(204.count-primes)

add_subdirectory(205.isomorphic-strings)

add_subdirectory(206.reverse-linked-list)

add_subdirectory(207.course-schedule)

add_subdirectory(208.implement-trie-prefix-tree)

add_subdirectory(209.minimum-size-subarray-sum)

add_subdirectory(210.course-schedule-ii)

add_subdirectory(211.add-and-search-word-data-structure-design)

add_subdirectory(212.word-search-ii)

add_subdirectory(213.house-robber-ii)

add_subdirectory(214.shortest-palindrome)

add_subdirectory(215.kth-largest-element-in-an-array)

add_subdirectory(216.combination-sum-iii)

add_subdirectory(217.contains-duplicate)

add_subdirectory(219.contains-duplicate-ii)

add_subdirectory(220.contains-duplicate-iii)

add_subdirectory(221.maximal-square)

add_subdirectory(222.count-complete-tree-nodes)

add_subdirectory(223.rectangle-area)

add_subdirectory(224.basic-calculator)

add_subdirectory(225.implement-stack-using-queues)

add_subdirectory(226.invert-binary-tree)
