cmake_minimum_required(VERSION 3.5)

add_subdirectory(241.different-ways-to-add-parentheses)

add_subdirectory(242.valid-anagram)

add_subdirectory(257.binary-tree-paths)

add_subdirectory(258.add-digits)

add_subdirectory(260.single-number-iii)

add_subdirectory(263.ugly-number)

add_subdirectory(264.ugly-number-ii)

add_subdirectory(268.missing-number)

add_subdirectory(273.integer-to-english-words)

add_subdirectory(274.h-index)